# tech-detective

./: .gitignore  .prettierignore  CHANGELOG.md  Justfile  README.md  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/actions/setup-python-dependencies/: action.yml
.github/actions/setup-test-dependencies/: action.yml
.github/actions/setup-typescript-dependencies/: action.yml
.github/other-configurations/: labeller.yml  labels.yml
.github/workflows/: code-quality.yml  code-scanning.yml  code-test.yml  codeql-analysis.yml  dependency-review.yml  deploy-to-github-pages.yml  pull-request-checks.yml  sync-labels.yml
dashboard/: .prettierrc.mjs  astro.config.mjs  dashboard.just  eslint.config.js  package-lock.json  package.json
detector/: detector.just  pyproject.toml
detector/application/: __main__.py  app.py
detector/application/tests/: test_app.py
detector/application/utils/: custom_logging.py  github_interactions.py  markdown.py  output_file.py  types.py
detector/application/utils/tests/: test_custom_logging.py  test_github_interactions.py  test_markdown.py  test_output_file.py
githooks/pre-commit-scripts/: python.sh  typescript.sh
tests/: .gitignore  pyproject.toml  tests.just
tests/end_to_end/: test_robots.py  test_sitemap.py  test_web_manifest.py
tests/end_to_end/utils/: variables.py
tests/schema_validation/: project_technologies_and_frameworks_schema.json
