[tool.poetry]
name = "tech-detective"
authors = ["Jack Plowman <62281988+JackPlowman@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.9"
vulture = "2.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
